Fix another error in type word

--- a/src/app/search-item/search-item.component.html
+++ b/src/app/search-item/search-item.component.html
@@ -45,7 +45,7 @@
     star_border
     </i>
   </span>
-    <span class="star-explain">
+    <span class="search-item__status-explain">
     {{ 'CREATED_LESS_THAN_TWO_WEEKS_AGO' | translate }}
   </span>
   </ng-container>
