--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -123,24 +123,13 @@
             </div>
           </div>
         </div>
-        <div class="settings-form__group">
-          <input class="settings-form__checkbox" type="checkbox" id="disable-images-animation"
-                 [(ngModel)]="settings.disableImages"
-                 [ngModelOptions]="{standalone: true}">
-          <label class="settings-form__label" for="disable-images-animation">{{'DISABLE_THUMBNAILS_FIT' | translate}}</label>
-        </div>
-        <div class="settings-form__group">
-          <input type="checkbox" class="settings-form__checkbox" id="crop-description"
-                 [(ngModel)]="settings.croppedDescription"
-                 [ngModelOptions]="{standalone: true}">
-          <label class="settings-form__label" for="crop-description">{{'CROP_DESCRIPTION_AFTER_SECOND_LINE' | translate}}</label>
-        </div>
+
       </form>
     </div>
   </div>
 </header>
 
-<app-sidenav @enterAnimation *ngIf="settings.showSidenav" [settings]="settings" ></app-sidenav>
+<app-sidenav @enterAnimation *ngIf="settings.showSidenav" [settings]="settings" (newItemEvent)="newItem($event)"></app-sidenav>
 
 <app-welcome *ngIf="!res"></app-welcome>
 <app-ie *ngIf="settings.ieMode"></app-ie>
