--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -6,11 +6,31 @@
     </button>
 </h2>
 
-<div class="sidebar__content">
-    <button class="sidebar__action" (click)="clearchSearchHistory()">
-        <i class="material-icons">undo</i>
-        Clear search history
-    </button>
+
+<div class="settings-form__group">
+    <div class="sidebar__content">
+        <button class="sidebar__action" (click)="clearchSearchHistory()">
+            <i class="material-icons">undo</i>
+            Clear search history
+        </button>
+
+        <button class="sidebar__action" (click)="chooseActionType()">
+            <i class="material-icons">sent</i>
+            EMMIT 
+        </button>
+
+        <input class="settings-form__checkbox" type="checkbox" id="disable-images-animation"
+               [(ngModel)]="settings.disableImages"
+               [ngModelOptions]="{standalone: true}">
+        <label class="settings-form__label" for="disable-images-animation">{{'DISABLE_THUMBNAILS_FIT' | translate}}</label>
+      </div>
+      <div class="settings-form__group">
+        <input type="checkbox" class="settings-form__checkbox" id="crop-description"
+               [(ngModel)]="settings.croppedDescription"
+               [ngModelOptions]="{standalone: true}">
+        <label class="settings-form__label" for="crop-description">{{'CROP_DESCRIPTION_AFTER_SECOND_LINE' | translate}}</label>
+      </div>
+
 </div>
 
 </aside>
