--- a/src/app/sidenav/sidenav.component.scss
+++ b/src/app/sidenav/sidenav.component.scss
@@ -1,98 +1,101 @@
 @import '../../assets/styles/mixins';
 
 :host {
-    display: block;
-    position: fixed;
-    width: 300px;
-    max-width: 320px;
-    top: 0;
-    left: 0;
-    bottom: 0;
+  display: block;
+  position: fixed;
+  width: calc(260px + 2rem);
+  max-width: 100%;
+  top: 0;
+  left: 0;
+  bottom: 0;
 }
 
 .sidebar {
-    background-color: #fff;
-    border-right: 1px solid var(--primary-border-color);
-    height: 100%;
+  background-color: #fff;
+  border-right: 1px solid var(--primary-border-color);
+  height: 100%;
 
-    &__title {
-        border-bottom: 1px solid var(--primary-border-color);
-        display: flex;
-        min-height: 57px;
-        padding: 0.5rem;
-        align-items: center;
-        justify-content: flex-start;
-        font-size: 1.25em;
-        font-weight: 500;
+  &__title {
+    border-bottom: 1px solid var(--primary-border-color);
+    display: flex;
+    min-height: 57px;
+    padding: 0.5rem;
+    align-items: center;
+    justify-content: flex-start;
+    font-size: 1.25em;
+    font-weight: 500;
 
-        span {
-            flex: 1;
-        }
+    span {
+      flex: 1;
     }
+  }
 
-    &__content {
-        padding: 0.5rem;
+  &__content {
+    padding: 0.5rem;
+  }
+
+  &__action {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    padding: 0.5rem 1rem;
+    text-align: left;
+    font-size: 1rem;
+    border: 0;
+    cursor: pointer;
+    background-color: transparent;
+    transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+
+    &:focus,
+    &:hover,
+    &:active {
+      color: var(--primary-color);
+      background-color: rgba(0, 0, 0, 0.05);
     }
-
-    &__action {
-        display: flex;
-        align-items: center;
-        width: 100%;
-        padding: 0.5rem 1rem;
-        text-align: left;
-        font-size: 1rem;
-        border: 0;
-        cursor: pointer;
-        background-color: transparent;
-        transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-
-        &:focus, 
-        &:hover,
-        &:active {
-            color: var(--primary-color);
-            background-color: rgba(0, 0, 0, 0.05);
-        }
-    }
+  }
 }
 
-.sttings-checkboxes {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 0.5rem;
-    margin: 0.5rem;
+.settings-checkboxes {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 0.5rem;
+  margin: 0.5rem;
 }
 
 .setting-item {
 
-    input {
-        display: none;
+  input {
+    display: none;
 
-        &:checked + label {
-            background-color: var(--primary-color);
-            color: #fff;
-        }
+    &:checked + label {
+      background-color: rgba(0, 0, 0, 0.25);
+    }
+  }
+
+  label {
+    width: 100%;
+    height: 90px;
+    padding: 0.5rem;
+    background-color: #dedede;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    cursor: pointer;
+    font-size: 0.75em;
+    border: 1px solid transparent;
+
+    &:hover {
+      border-color: var(--primary-color);
     }
 
-    label {
-        width: 100%;
-        height: 120px;
-        padding: 0.5rem;
-        background-color: #dedede;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        align-items: flex-start;
-        cursor: pointer;
-        font-size: 0.75em;
-        border: 1px solid transparent;
-
-        &:hover {
-            border-color: var(--primary-color);
-        }
+    span {
+      line-height: 1.1;
     }
+  }
 
-    .material-icons {
-        font-size: 2em;
-        @include gradient-overlay();
-    }
+  .material-icons {
+    font-size: 2em;
+    @include gradient-overlay();
+  }
 }
