Dark mode on  sidebar

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,7 +25,7 @@
   --overlay-background-color: rgba(0, 0, 0, 0.2);
   --ornament-color: #ffa500;
   --submenu-background-color: #fff;
-
+  --sidebar-background-color: #fff;
   --font: 'Open Sans', sans-serif;
 }
 
@@ -52,6 +52,7 @@
   --overlay-background-color: rgba(0, 0, 0, 0.5);
   --ornament-color: #ffa500;
   --submenu-background-color: #000;
+  --sidebar-background-color: #000;
   --font: 'Open Sans', sans-serif;
 }
 
