--- a/src/app/sidenav/sidenav.component.scss
+++ b/src/app/sidenav/sidenav.component.scss
@@ -11,7 +11,7 @@
 }
 
 .sidebar {
-  background-color: #fff;
+  background-color: var(--sidebar-background);
   border-right: 1px solid var(--primary-border-color);
   height: 100%;
 
@@ -45,7 +45,7 @@
     cursor: pointer;
     background-color: transparent;
     transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-
+    color: var(--font-color);
     &:focus,
     &:hover,
     &:active {
@@ -76,7 +76,7 @@
     width: 100%;
     height: 90px;
     padding: 0.5rem;
-    background-color: #dedede;
+    background-color: rgba(0, 0, 0, 0.1);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -84,6 +84,7 @@
     cursor: pointer;
     font-size: 0.75em;
     border: 1px solid transparent;
+    transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 
     &:hover {
       border-color: var(--primary-color);
