Fix sidenav background

--- a/src/app/sidenav/sidenav.component.scss
+++ b/src/app/sidenav/sidenav.component.scss
@@ -10,8 +10,8 @@
   bottom: 0;
 }
 
-.sidebar {
-  background-color: var(--sidebar-background);
+.sidebar { 
+  background-color: var(--sidebar-background-color);
   border-right: 1px solid var(--primary-border-color);
   height: 100%;
 
